--- a/index.html
+++ b/index.html
@@ -10,5 +10,10 @@
 </head>
 <body>
     <!-- Corpo da minha página -->
+    <div>
+        <p>Conteúdo</p>
+        <img src = "" alt="">
+        &lt;
+    </div>
 </body>
 </html>
