--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 </head>
 <body>
     <!-- Corpo da minha página -->
-    <div>
-        <p>Conteúdo</p>
-        <img src = "" alt="">
-        &lt;
-    </div>
+        <!--Lista Ordenada-->
+        <ol>
+            <li>HTML</li>
+            <li>CSS</li>
+        </ol>
+
+        <a href = "https://www.google.com.br">Google</a>
 </body>
 </html>
